Delete contact email address

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@ Development Team
 ================
 
 TIS Inc.  
-HyClops for Zabbix team <hyclops@ml.tis.co.jp>
+HyClops for Zabbix team
 
 Core developers
 ===============
